--- a/build.gradle
+++ b/build.gradle
@@ -1,17 +1,23 @@
-buildscript {
-  repositories {
-    jcenter()
-  }
-  dependencies {
-    classpath "nl.javadude.gradle.plugins:license-gradle-plugin:0.11.0"
-  }
+import org.apache.tools.ant.filters.ReplaceTokens
+
+
+plugins {
+    id "com.github.hierynomus.license" version "0.13.0"
+    id "com.xebialabs.xldp" version "1.0.5"
+    id "com.xebialabs.xld.docker" version "1.0.11"
 }
 
 version = '1.0.3'
 
-apply plugin: "com.github.hierynomus.license"
+xldDocker {
+    version = '5.5.3.1'
+}
+
 apply plugin: 'java'
 apply plugin: 'idea'
+apply plugin: 'eclipse'
+apply plugin: 'maven'
+
 
 dependencies {
   compile "com.xebialabs.deployit:udm-plugin-api:2014.7"
@@ -36,6 +42,14 @@ repositories {
     url 'http://nexus.xebialabs.com/nexus/content/repositories/releases'
   }
 }
+
+processResources.configure {
+    filter ReplaceTokens, tokens: [
+            'project.version': version.toString(),
+            'project.name': rootProject.name
+    ]
+}
+
 
 license {
   header rootProject.file('src/main/license/xebialabs_community.license')
