--- a/build.gradle
+++ b/build.gradle
@@ -35,11 +35,7 @@ repositories {
   mavenLocal()
   mavenCentral()
   maven {
-    credentials {
-      username 'community-plugins'
-      password 'community'
-    }
-    url 'http://nexus.xebialabs.com/nexus/content/repositories/releases'
+    url 'https://dist.xebialabs.com/public/maven2'
   }
 }
 
