--- a/build.gradle
+++ b/build.gradle
@@ -2,9 +2,9 @@ import org.apache.tools.ant.filters.ReplaceTokens
 
 
 plugins {
-    id "com.github.hierynomus.license" version "0.13.0"
+    id "com.github.hierynomus.license" version "0.14.0"
     id "com.xebialabs.xldp" version "1.0.5"
-    id "com.xebialabs.xld.docker" version "1.0.11"
+    id "com.xebialabs.xl.docker" version "1.1.0"
 }
 
 version = '1.0.4'
