--- a/build.gradle
+++ b/build.gradle
@@ -2,16 +2,21 @@ import org.apache.tools.ant.filters.ReplaceTokens
 
 
 plugins {
-    id "com.github.hierynomus.license" version "0.14.0"
-    id "com.xebialabs.xldp" version "1.0.5"
-    id "com.xebialabs.xl.docker" version "1.1.0"
+  id "com.github.hierynomus.license" version "0.14.0"
+  id "com.xebialabs.xldp" version "1.0.5"
+  id "com.xebialabs.xl.docker" version "1.1.0"
 }
 
 version = '1.0.4'
 
-xldDocker {
-    version = '5.5.3.1'
+xlDocker {
+  compileImage = 'xebialabs/xld_dev_compile'
+  compileVersion = 'v7.5.0.1'
+  runImage = 'xebialabs/xld_dev_run'
+  runVersion = 'v7.5.0.1'
+  runPortMapping = '14516:4516'
 }
+
 
 apply plugin: 'java'
 apply plugin: 'idea'
@@ -40,15 +45,16 @@ repositories {
 }
 
 processResources.configure {
-    filter ReplaceTokens, tokens: [
-            'project.version': version.toString(),
-            'project.name': rootProject.name
-    ]
+  filter ReplaceTokens, tokens: [
+    'project.version': version.toString(),
+    'project.name'   : rootProject.name
+  ]
 }
 
 
 license {
-  header rootProject.file('src/main/license/xebialabs_community.license')
-  exclude "**/package.json"
+  header rootProject.file('License.md')
   strictCheck false
+  ext.year = Calendar.getInstance().get(Calendar.YEAR)
+  ext.name = 'XEBIALABS'
 }
