--- a/build.gradle
+++ b/build.gradle
@@ -5,9 +5,8 @@ plugins {
   id "com.github.hierynomus.license" version "0.14.0"
   id "com.xebialabs.xldp" version "1.0.5"
   id "com.xebialabs.xl.docker" version "1.1.0"
+  id "nebula.release" version "6.0.0"
 }
-
-version = '1.0.4'
 
 xlDocker {
   compileImage = 'xebialabs/xld_dev_compile'
@@ -22,6 +21,14 @@ apply plugin: 'java'
 apply plugin: 'idea'
 apply plugin: 'eclipse'
 apply plugin: 'maven'
+
+if (!project.hasProperty('release.scope')) {
+  project.ext['release.scope'] = 'patch'
+}
+
+if (!project.hasProperty('release.useLastTag')) {
+  project.ext['release.useLastTag'] = true
+}
 
 
 dependencies {
