--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ deploy:
     secure: VcwxOdFebF5FcOCBMiUB3HFUfoTdVOd6ExlMPIzQXv6XxOiCtlkwKbB9iuKJ7FnbMya4r3bCwuCzf9j4PZ3w/OEvV65e9aOKK0v6svVfHq2RxNV3x6BSe4mOEwT679GAZJ/pEKr34gQk0Gcc1n/G6e9hx+K3PuK9eOjZ55Ui+w0=
   file_glob: true
   file: build/distributions/*
+  skip_cleanup: true
   on:
     repo: xebialabs-community/xld-smoke-test-plugin
     all_branches: true
