--- a/build.gradle
+++ b/build.gradle
@@ -1,26 +1,44 @@
 import org.apache.tools.ant.filters.ReplaceTokens
 
-
 plugins {
   id "com.github.hierynomus.license" version "0.14.0"
   id "com.xebialabs.xldp" version "1.0.5"
+  id 'nebula.release' version '11.0.0'
   id "com.xebialabs.xl.docker" version "1.1.0"
-  id "nebula.release" version "6.0.0"
 }
+
+apply plugin: 'eclipse'
+apply plugin: 'idea'
+apply plugin: 'java'
+apply plugin: 'maven'
+
+repositories {
+  mavenLocal()
+  mavenCentral()
+  maven {
+    url 'https://dist.xebialabs.com/public/maven2'
+  }
+}
+
+def apiVersion = "2018.6.5"
+
+dependencies {
+  compile "com.xebialabs.deployit:udm-plugin-api:$apiVersion"
+  compile "org.slf4j:slf4j-api:1.7.25"  
+}
+
+version = "1.0.6"
+
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
 
 xlDocker {
-  compileImage = 'xebialabs/xld_dev_compile'
-  compileVersion = 'v7.5.0.1'
-  runImage = 'xebialabs/xld_dev_run'
-  runVersion = 'v7.5.0.1'
-  runPortMapping = '14516:4516'
+  compileImage = 'xebialabs/xlr_dev_compile'
+  compileVersion = 'v8.5.0.1'
+  runImage = 'xebialabs/xlr_dev_run'
+  runVersion = 'v8.5.0.1'
+  runPortMapping = '15516:5516'
 }
-
-
-apply plugin: 'java'
-apply plugin: 'idea'
-apply plugin: 'eclipse'
-apply plugin: 'maven'
 
 if (!project.hasProperty('release.scope')) {
   project.ext['release.scope'] = 'patch'
@@ -39,7 +57,7 @@ processResources.configure {
 
 license {
   header rootProject.file('License.md')
-  strictCheck false
+  strictCheck true
   ext.year = Calendar.getInstance().get(Calendar.YEAR)
   ext.name = 'XEBIALABS'
 }
